added clients test1 to test5

--- a/src/main/resources/jdofactories.properties
+++ b/src/main/resources/jdofactories.properties
@@ -2,3 +2,8 @@ api=java:comp/env/jdbc/ApiDB
 testclient=java:comp/env/jdbc/ClientDB
 default_client=java:comp/env/jdbc/ClientDB
 movielens=java:comp/env/jdbc/ClientDB
+test1=java:comp/env/jdbc/ClientDB
+test2=java:comp/env/jdbc/ClientDB
+test3=java:comp/env/jdbc/ClientDB
+test4=java:comp/env/jdbc/ClientDB
+test5=java:comp/env/jdbc/ClientDB
